force-app/main/default/objects/Calificacion__c/Calificacion__c.object-meta.xml
<CustomObject>
    <description>Calificaciones de los becarios</description>
    <label>Calificación</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Calificación</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calificaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>