force-app/main/default/objects/Calificacion__c/fields/Boletin__c.field-meta.xml
<CustomField>
    <fullName>Boletin__c</fullName>
    <label>Boletín</label>
    <referenceTo>Boletin__c</referenceTo>
    <relationshipLabel>Calificaciones</relationshipLabel>
    <relationshipName>Calificaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>