force-app/main/default/objects/Calificacion__c/fields/Evitar_duplicados__c.field-meta.xml
<CustomField>
    <fullName>Evitar_duplicados__c</fullName>
    <label>Evitar duplicados</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>