force-app/main/default/objects/Calificacion__c/fields/Materia__c.field-meta.xml
<CustomField>
    <fullName>Materia__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Materia</label>
    <referenceTo>Materia__c</referenceTo>
    <relationshipLabel>Calificaciones</relationshipLabel>
    <relationshipName>Calificaciones</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>