force-app/main/default/objects/Calificacion__c/fields/Primer_trimestre__c.field-meta.xml
<CustomField>
    <fullName>Primer_trimestre__c</fullName>
    <description>Nota de la materia en el primer trimestre.</description>
    <label>Primer trimestre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>