force-app/main/default/objects/Calificacion__c/fields/Segundo_trimestre__c.field-meta.xml
<CustomField>
    <fullName>Segundo_trimestre__c</fullName>
    <description>Nota de la materia en el segundo trimestre.</description>
    <label>Segundo trimestre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>