force-app/main/default/objects/Calificacion__c/fields/Tercer_trimestre__c.field-meta.xml
<CustomField>
    <fullName>Tercer_trimestre__c</fullName>
    <description>Nota de la materia en el tercer trimestre.</description>
    <label>Tercer trimestre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>